--- a/Index.html
+++ b/Index.html
@@ -54,7 +54,7 @@
   <h5 style="font-style: oblique; color: black;">Holistic education for your child.</h5>
   <!--Forms-->
   <div>
-    <h5>Apply for admission here;</h5>
+    <p>Apply for admission here;</p>
   </div>
   <form class="row g-3">
     <div class="col-md-2">
@@ -134,18 +134,14 @@
   </div>
 
   <!--Footer-->
-  <div class="p-3 mb-2 bg-success text-white".bg-success style="text-center">
-    <h5>Contact Us</h5>
-    <P><i class="bi bi-geo-alt-fill"> ABC High School, Ang'awa Avenue, Limuru Road, Nairobi, Kenya.</i></P>
-    <p><i class="bi bi-telephone"> +254 700 013 456</i></p>
-    <p><i class="bi bi-envelope-fill"> Info@abc.edu</i></p>
-
-    <a href="#" class="bi bi-facebook"></i></a>
-    <a href="#" class="bi bi-twitter"></i></a>
-    <a href="#" class="bi bi-whatsapp"></i></a>
-    <p> ABC High School &copy 2021. All Rights Reserved.</p>
-  </div>
-
+    <div class="p-3 mb-2 bg-success text-white".bg-success>
+      <h5>Contact Us</h5>
+      <P><i class="bi bi-geo-alt-fill"> ABC High School, Ang'awa Avenue, Limuru Road, Nairobi, Kenya.</i></P>
+      <p><i class="bi bi-telephone"> +254 700 013 456</i></p>
+      <p><i class="bi bi-envelope-fill"> Info@abc.edu</i></p>
+      <p> ABC High School &copy 2021. All Rights Reserved.</p>
+    </div>
+    
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
