Fixed navigation bar

--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
 
 <body>
   <!--Navigation-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed;" >
     <div class="container-fluid">
       <a class="navbar-brand" style="font-style: italic; color:green;" href="#">ABC High School</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -132,6 +132,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+<!--Main body-->
 
   <!--Footer-->
     <div class="p-3 mb-2 bg-success text-white".bg-success>
@@ -141,7 +142,7 @@
       <p><i class="bi bi-envelope-fill"> Info@abc.edu</i></p>
       <p> ABC High School &copy 2021. All Rights Reserved.</p>
     </div>
-    
+
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
