--- a/Index.html
+++ b/Index.html
@@ -185,7 +185,7 @@
     </div>
   </div>
   <!--Footer-->
-  <div class="p-3 mb-2 bg-success text-white" .bg-success>
+  <div class="p-3 mb-2 bg-success text-white" .bg-success style="text-align: center;">
     <h5>Contact Us</h5>
     <P><i class="bi bi-geo-alt-fill"> ABC High School, Ang'awa Avenue, Limuru Road, Nairobi, Kenya.</i></P>
     <p><i class="bi bi-telephone"> +254 700 013 456</i></p>
